--- a/PlayerApp/MainWindow.xaml
+++ b/PlayerApp/MainWindow.xaml
@@ -57,7 +57,7 @@
                 <DataTemplate DataType="{x:Type Controls:HamburgerMenuItem}">
                     <Grid x:Name="TheContentGrid">
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="28"/>
+                            <RowDefinition Height="48"/>
                             <RowDefinition/>
                         </Grid.RowDefinitions>
                         <Border Grid.Row="0" Background="#FF444444">
@@ -72,7 +72,8 @@
                                         Grid.Row="1"
                                         Focusable="False"
                                         Foreground="{DynamicResource BlackBrush}"
-                                        Content="{Binding Tag}"/>
+                                        Content="{Binding Tag}" 
+                                        Loaded="TheContent_Loaded"/>
                     </Grid>
                 </DataTemplate>
             </Controls:HamburgerMenu.ContentTemplate>
