Some visual changes

--- a/PlayerApp/Views/HomeView.xaml
+++ b/PlayerApp/Views/HomeView.xaml
@@ -145,7 +145,8 @@
                 <ComboBox Height="23"
                           Style="{StaticResource ComboBoxStyle}"
                           ItemsSource="{Binding ListasDeReproduccion}"
-                          SelectedItem="{Binding ListaDeReproduccionSeleccionada}">
+                          SelectedItem="{Binding ListaDeReproduccionSeleccionada, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                    
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Nombre}" />
