--- a/PlayerApp/MainWindow.xaml
+++ b/PlayerApp/MainWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Controls:MetroWindow x:Class="PlayerApp.MainWindow"
+﻿<!--https://docs.microsoft.com/en-us/windows/uwp/design/style/segoe-ui-symbol-font-->
+<Controls:MetroWindow x:Class="PlayerApp.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,7 +8,10 @@
         xmlns:local="clr-namespace:PlayerApp"
         xmlns:views="clr-namespace:PlayerApp.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800">
+        Title="PlayerApp" 
+        MinHeight="600" MinWidth="800"
+        Height="600" 
+        Width="800">
 
     <Grid>
         <Grid.Resources>
@@ -45,19 +49,25 @@
             
             <Controls:HamburgerMenu.ItemsSource>
                 <Controls:HamburgerMenuItemCollection>
-                    
-                    <Controls:HamburgerMenuGlyphItem Glyph="" Label="Canciones">
+
+                    <Controls:HamburgerMenuGlyphItem Glyph="&#xEC4F;" Label="Canciones">
                         <Controls:HamburgerMenuGlyphItem.Tag>
                             <views:HomeView/>
                         </Controls:HamburgerMenuGlyphItem.Tag>
                     </Controls:HamburgerMenuGlyphItem>
 
-                    <Controls:HamburgerMenuGlyphItem Glyph="" Label="Añadir Listas">
+                    <Controls:HamburgerMenuGlyphItem Glyph="&#xEA40;" Label="PLayLists">
                         <Controls:HamburgerMenuGlyphItem.Tag>
                             <views:PlayListView/>
                         </Controls:HamburgerMenuGlyphItem.Tag>
                     </Controls:HamburgerMenuGlyphItem>
-                    
+
+                    <Controls:HamburgerMenuGlyphItem Glyph="&#xE896;" Label="Descargar Música">
+                        <Controls:HamburgerMenuGlyphItem.Tag>
+                            <views:PlayListView/>
+                        </Controls:HamburgerMenuGlyphItem.Tag>
+                    </Controls:HamburgerMenuGlyphItem>
+
                 </Controls:HamburgerMenuItemCollection>
             </Controls:HamburgerMenu.ItemsSource>
             
