--- a/PlayerApp/Views/PlayListView.xaml
+++ b/PlayerApp/Views/PlayListView.xaml
@@ -1,89 +1,128 @@
 ﻿<UserControl x:Class="PlayerApp.Views.PlayListView"
-              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
              xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
              xmlns:local="clr-namespace:PlayerApp.Views"
-             mc:Ignorable="d" d:DesignWidth="635" d:DesignHeight="505"
-             HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+             mc:Ignorable="d"
+             d:DesignWidth="635"
+             d:DesignHeight="505"
+             HorizontalAlignment="Stretch"
+             VerticalAlignment="Stretch">
 
     <UserControl.Resources>
-        <ControlTemplate x:Key="TextBoxBaseControlTemplate" TargetType="{x:Type TextBoxBase}">
-            <Border Background="{TemplateBinding Background}" 
-                x:Name="Bd"
-                BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="10">
-                <ScrollViewer x:Name="PART_ContentHost"/>
+        <ControlTemplate x:Key="TextBoxBaseControlTemplate"
+                         TargetType="{x:Type TextBoxBase}">
+            <Border Background="{TemplateBinding Background}"
+                    x:Name="Bd"
+                    BorderThickness="{TemplateBinding BorderThickness}"
+                    CornerRadius="10">
+                <ScrollViewer x:Name="PART_ContentHost" />
             </Border>
             <ControlTemplate.Triggers>
-                <Trigger Property="IsEnabled" Value="False">
-                    <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" TargetName="Bd"/>
-                    <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+                <Trigger Property="IsEnabled"
+                         Value="False">
+                    <Setter Property="Background"
+                            Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"
+                            TargetName="Bd" />
+                    <Setter Property="Foreground"
+                            Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
                 </Trigger>
-                <Trigger Property="Width" Value="Auto">
-                    <Setter Property="MinWidth" Value="100"/>
+                <Trigger Property="Width"
+                         Value="Auto">
+                    <Setter Property="MinWidth"
+                            Value="100" />
                 </Trigger>
-                <Trigger Property="Height" Value="Auto">
-                    <Setter Property="MinHeight" Value="20"/>
+                <Trigger Property="Height"
+                         Value="Auto">
+                    <Setter Property="MinHeight"
+                            Value="20" />
                 </Trigger>
             </ControlTemplate.Triggers>
         </ControlTemplate>
     </UserControl.Resources>
 
-    <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#FF444455" DataContext="{Binding PlayListViewModel, Source={StaticResource Locator}}">
+    <Grid HorizontalAlignment="Stretch"
+          VerticalAlignment="Stretch"
+          Background="#FF444455"
+          DataContext="{Binding PlayListViewModel, Source={StaticResource Locator}}">
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition Height="200"/>
+            <RowDefinition Height="90" />
+            <RowDefinition />
+            <RowDefinition Height="150" />
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
+        <StackPanel Grid.Row="0"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Center">
+            <Label Content="Crear/Eliminar/Modificar PLayLists"
+                   FontSize="30"
+                   Foreground="#FFFDF2F2" />
+        </StackPanel>
+        <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition Width="40"/>
-                <ColumnDefinition/>
+                <ColumnDefinition />
+                <ColumnDefinition Width="40" />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
-            <StackPanel Grid.Column="1" VerticalAlignment="Center" Orientation="Vertical">
-                <Button Content="Add" Margin="0,10,0,10" Command="{Binding AddCommand}"/>
-                <Button Content="Quit" Margin="0,10,0,10" Command="{Binding QuitCommand}"/>
+            <StackPanel Grid.Column="1"
+                        VerticalAlignment="Center"
+                        Orientation="Vertical">
+                <Button Content="Add"
+                        Margin="0,10,0,10"
+                        Command="{Binding AddCommand}" />
+                <Button Content="Quit"
+                        Margin="0,10,0,10"
+                        Command="{Binding QuitCommand}" />
             </StackPanel>
-            <ListView Grid.Column="0" Margin="20,10,20,10" ItemsSource="{Binding AllSongsList}" SelectedItem="{Binding CancionSeleccionada}">
+            <ListView Grid.Column="0"
+                      Margin="20,10,20,10"
+                      ItemsSource="{Binding AllSongsList}"
+                      SelectedItem="{Binding CancionSeleccionada}">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn DisplayMemberBinding="{Binding Nombre}"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Nombre}" />
                     </GridView>
                 </ListView.View>
             </ListView>
-            <ListView Grid.Column="2" Margin="20,10,20,10" ItemsSource="{Binding AddSongList}" SelectedItem="{Binding CancionSeleccionadaQuit}">
+            <ListView Grid.Column="2"
+                      Margin="20,10,20,10"
+                      ItemsSource="{Binding AddSongList}"
+                      SelectedItem="{Binding CancionSeleccionadaQuit}">
                 <ListView.View>
                     <GridView>
-                        <GridViewColumn DisplayMemberBinding="{Binding Nombre}"/>
+                        <GridViewColumn DisplayMemberBinding="{Binding Nombre}" />
                     </GridView>
                 </ListView.View>
             </ListView>
         </Grid>
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="2">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <StackPanel Grid.Column="0" Orientation="Vertical" Margin="15,15,15,15" VerticalAlignment="Center">
-                    <Label Content="Añadir Nombre Lista Reproducción: " Foreground="White" />
-                    <TextBox Template="{StaticResource TextBoxBaseControlTemplate}" 
-                             Height="20" 
+                <StackPanel Grid.Column="0"
+                            Orientation="Vertical"
+                            Margin="15,15,15,15"
+                            VerticalAlignment="Center">
+                    <Label Content="Añadir Nombre Lista Reproducción: "
+                           Foreground="White" />
+                    <TextBox Template="{StaticResource TextBoxBaseControlTemplate}"
+                             Height="20"
                              VerticalContentAlignment="Center"
                              Text="{Binding NewPlayListName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                     </TextBox>
-                    <Button Width="60" 
-                            Height="10" 
-                            Margin="0,20,0,20" 
+                    <Button Width="60"
+                            Height="10"
+                            Margin="0,20,0,20"
                             Content="Añadir"
                             HorizontalAlignment="Center"
-                            Command="{Binding AddPlayListCommand}"/>
+                            Command="{Binding AddPlayListCommand}" />
 
                 </StackPanel>
             </Grid>
         </Grid>
-        
     </Grid>
 </UserControl>
