--- a/PlayerApp/MainWindow.xaml
+++ b/PlayerApp/MainWindow.xaml
@@ -1,25 +1,27 @@
 ﻿<!--https://docs.microsoft.com/en-us/windows/uwp/design/style/segoe-ui-symbol-font-->
 <Controls:MetroWindow x:Class="PlayerApp.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        xmlns:local="clr-namespace:PlayerApp"
-        xmlns:views="clr-namespace:PlayerApp.Views"
-        mc:Ignorable="d"
-        Title="PlayerApp" 
-        MinHeight="600" MinWidth="800"
-        Height="600" 
-        Width="800">
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      xmlns:local="clr-namespace:PlayerApp"
+                      xmlns:views="clr-namespace:PlayerApp.Views"
+                      mc:Ignorable="d"
+                      Title="PlayerApp"
+                      MinHeight="600"
+                      MinWidth="800"
+                      Height="600"
+                      Width="800">
 
     <Grid>
         <Grid.Resources>
-            <DataTemplate x:Key="MenuItemTemplate" DataType="{x:Type Controls:HamburgerMenuGlyphItem}">
+            <DataTemplate x:Key="MenuItemTemplate"
+                          DataType="{x:Type Controls:HamburgerMenuGlyphItem}">
                 <Grid Height="48">
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="48"/>
-                        <ColumnDefinition/>
+                        <ColumnDefinition Width="48" />
+                        <ColumnDefinition />
                     </Grid.ColumnDefinitions>
                     <TextBlock Grid.Column="0"
                                FontSize="16"
@@ -27,17 +29,20 @@
                                VerticalAlignment="Center"
                                FontFamily="Segoe MDL2 Assets"
                                Foreground="White"
-                               Text="{Binding Glyph}"/>
-                    
+                               Text="{Binding Glyph}" />
+
                     <TextBlock Grid.Column="1"
                                VerticalAlignment="Center"
                                FontSize="16"
                                Foreground="White"
-                               Text="{Binding Label}"/>
+                               Text="{Binding Label}" />
                 </Grid>
             </DataTemplate>
-            
+
         </Grid.Resources>
+        <Grid.DataContext>
+            <Binding Source="{StaticResource Locator}" />
+        </Grid.DataContext>
 
         <Controls:HamburgerMenu x:Name="HamburguerMenuControl"
                                 Foreground="White"
@@ -45,46 +50,50 @@
                                 IsPaneOpen="False"
                                 ItemTemplate="{StaticResource MenuItemTemplate}"
                                 ItemClick="HamburguerMenuControl_ItemClick"
-                                DisplayMode="CompactInline">
-            
+                                DisplayMode="CompactInline"
+                                SelectedItem=""
+                                SelectedIndex="0">
+
             <Controls:HamburgerMenu.ItemsSource>
                 <Controls:HamburgerMenuItemCollection>
 
-                    <Controls:HamburgerMenuGlyphItem Glyph="&#xEC4F;" Label="Canciones">
+                    <Controls:HamburgerMenuGlyphItem Glyph="&#xEC4F;"
+                                                     Label="Canciones">
                         <Controls:HamburgerMenuGlyphItem.Tag>
-                            <views:HomeView/>
+                            <views:HomeView />
                         </Controls:HamburgerMenuGlyphItem.Tag>
                     </Controls:HamburgerMenuGlyphItem>
 
-                    <Controls:HamburgerMenuGlyphItem Glyph="&#xEA40;" Label="PLayLists">
+                    <Controls:HamburgerMenuGlyphItem Glyph="&#xEA40;"
+                                                     Label="PLayLists">
                         <Controls:HamburgerMenuGlyphItem.Tag>
-                            <views:PlayListView/>
+                            <views:PlayListView />
                         </Controls:HamburgerMenuGlyphItem.Tag>
                     </Controls:HamburgerMenuGlyphItem>
 
-                    <Controls:HamburgerMenuGlyphItem Glyph="&#xE896;" Label="Descargar Música">
+                    <Controls:HamburgerMenuGlyphItem Glyph="&#xE896;"
+                                                     Label="Descargar Música">
                         <Controls:HamburgerMenuGlyphItem.Tag>
-                            <views:PlayListView/>
+                            <views:DownloadView />
                         </Controls:HamburgerMenuGlyphItem.Tag>
                     </Controls:HamburgerMenuGlyphItem>
 
                 </Controls:HamburgerMenuItemCollection>
             </Controls:HamburgerMenu.ItemsSource>
-            
+
 
             <Controls:HamburgerMenu.ContentTemplate>
                 <DataTemplate DataType="{x:Type Controls:HamburgerMenuItem}">
                     <Grid x:Name="TheContentGrid">
                         <Grid.RowDefinitions>
-                            <RowDefinition/>
+                            <RowDefinition />
                         </Grid.RowDefinitions>
-                        
+
                         <ContentControl x:Name="TheContent"
                                         Grid.Row="0"
                                         Focusable="False"
                                         Foreground="{DynamicResource BlackBrush}"
-                                        Content="{Binding Tag}" 
-                                        Loaded="TheContent_Loaded"/>
+                                        Content="{Binding Tag}"/>
                     </Grid>
                 </DataTemplate>
             </Controls:HamburgerMenu.ContentTemplate>
